# onnx-io

./: .gitignore  pyproject.toml
onnx_io/adapters/: __init__.py
