[tool.poetry]
name = "onnx-io"
version = "0.1.0"
description = "Standardize ONNX model input and output (I/O) data with a pure, consistent schema."
authors = ["Nathan Lucas <nathan@bnlucas.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bnlucas/onnx-io"
repository = "https://github.com/bnlucas/onnx-io"
keywords = [
    "onnx",
    "machine-learning",
    "deep-learning",
    "ml",
    "ai",
    "inference",
    "io",
    "input-output",
    "standardization",
    "schema",
    "interface",
    "data-handling",
    "unified",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0.0"
numpy = "^2.3.1"
onnxruntime = "^1.22.1"
pillow = "^11.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.0"
black = { version = "*", allow-prereleases = true }
flake8 = "^7.3.0"
pre-commit = "^4.2.0"
tox = "^4.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.semantic_release]
version_variable = [
    "onnx_io/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
